{
    "name": "CustomActions",
    "maps": [
        {
            "name": "Main",
            "id": "3fb12e4d-2ed4-4f08-a8a8-e91fec7c409c",
            "actions": [
                {
                    "name": "ClickMove",
                    "type": "Button",
                    "id": "69feb782-f1a5-418a-a1c8-26a786ce994f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "24b8f564-f619-435c-a44b-69e50d553424",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ClickMove",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}